--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 h1  {
     color: black;
-    border: solid 5px grey;
+    border: solid 5px darkgrey;
     display: inline-block;
     text-align: center;
     padding-left: 12.5px;
@@ -12,11 +12,19 @@ h1  {
 body    {
     background-color: darkgrey;
     margin: auto;
+    background-image: url(IMG_0379.JPG);
+    border: solid 7.5px black;
+    border-radius: 35px;
+    text-align: center;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 .text   {
     background-color: grey;
     border: solid 1px grey;
-    display: block;
+    display: inline;
     border-radius: 5px;
     text-align: center;
 }
@@ -24,4 +32,16 @@ body    {
     text-align: center;
     text-decoration: underline;
     font-weight: bold;
+}
+.link   {
+    font-weight: bold;
+
+}
+a:hover {
+    color: lightblue;
+    background-color: grey
+}
+a   {
+    background-color: darkgrey;
+    color: blue;
 }
