--- a/second.css
+++ b/second.css
@@ -18,3 +18,10 @@ a   {
     background-color: darkgrey;
     color: blue;
 }
+img {
+    width: 500px;
+    display: inline-block;
+}
+.work   {
+    display: inline-block;
+}
