--- a/term-one.css
+++ b/term-one.css
@@ -1,1 +1,14 @@
-
+img {
+    width: 500px;
+}
+body    {
+    background-color: darkgrey;
+    margin: auto;
+    border: solid 7.5px black;
+    border-radius: 35px;
+    text-align: center;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
