--- a/main.css
+++ b/main.css
@@ -12,7 +12,6 @@ h1  {
 body    {
     background-color: darkgrey;
     margin: auto;
-    background-image: url(IMG_0379.JPG);
     border: solid 7.5px black;
     border-radius: 35px;
     text-align: center;
@@ -47,4 +46,6 @@ a   {
 }
 img {
     width: 500px;
+    border-radius: 15px;
+    border: solid 5px black;
 }
