--- a/term-one.css
+++ b/term-one.css
@@ -12,3 +12,10 @@ body    {
     margin-top: 30px;
     margin-bottom: 30px;
 }
+a:hover {
+    color: lightblue;
+    background-color: grey
+}
+a   {
+    color: blue;
+}
