--- a/year.css
+++ b/year.css
@@ -38,25 +38,14 @@ body    {
 }
 a:hover {
     color: lightblue;
-    background-color: darkgrey;
+    background-color: grey
 }
 a   {
-    background-color: grey;
+    background-color: darkgrey;
     color: blue;
 }
 img {
     width: 500px;
     border-radius: 15px;
     border: solid 5px black;
-}
-p   {
-    color: black;
-    border: solid 5px darkgrey;
-    display: inline-block;
-    text-align: center;
-    padding-left: 12.5px;
-    padding-right: 12.5px;
-    border-radius: 15px;
-    font-weight: bold;
-    background-color: grey;
 }
