--- a/main.css
+++ b/main.css
@@ -60,3 +60,9 @@ p   {
     font-weight: bold;
     background-color: grey;
 }
+h25 {
+    text-align: left;
+    text-align: bottom;
+    color: grey;
+    text-decoration: dotted;
+}
