--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ img {
 }
 p   {
     color: black;
-    border: solid 5px darkgrey;
+    border: solid 5px grey;
     display: inline-block;
     text-align: center;
     padding-left: 12.5px;
@@ -60,9 +60,11 @@ p   {
     font-weight: bold;
     background-color: grey;
 }
-h25 {
+h6 {
     text-align: left;
     text-align: bottom;
     color: grey;
     text-decoration: dotted;
+    padding-left: 5px;
+    font-size: 5px;
 }
