--- a/year.css
+++ b/year.css
@@ -49,3 +49,14 @@ img {
     border-radius: 15px;
     border: solid 5px black;
 }
+p   {
+    color: black;
+    border: solid 5px grey;
+    display: inline-block;
+    text-align: center;
+    padding-left: 12.5px;
+    padding-right: 12.5px;
+    border-radius: 15px;
+    font-weight: bold;
+    background-color: darkgrey;
+}
